@@ -2,6 +2,7 @@ This file shows the changes in this release of xPDO.
 
 xPDO 2.0.0-rc2 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#XPDO-53] Fix bug preventing save of related objects when a key owner is foreign and not new
 - [#XPDO-54] Fix xPDOQuery to properly recognize MySQL Fulltext search expression as a conditional clause
 - [#XPDO-52] Fix fatal error when xPDOManager::createObjectContainer() cannot prepare a PDOStatement
 - xPDO::log() and xPDO::$logTarget will now accept an ARRAY target with an option that is a reference to the var
